--- a/styles.css
+++ b/styles.css
@@ -4,7 +4,7 @@ img {
 }
 
 body {
-    background-image: url("https://livewallpaperhd.com/wp-content/uploads/2020/10/Wallpaper-Black-Silk-HD.jpg");
+    background-image: url("Wallpaper-Black-Silk-HD.jpg");
     color: white;
 }
 
